# 201807351_LAB_SO1_2S2025

./: Variables.txt
Proyecto 1/Manuales/: Guia_Instalacion.md
Proyecto 1/VM1/API-1/: Dockerfile  go.mod  main.go
Proyecto 1/VM1/API-2/: Dockerfile  go.mod  main.go
Proyecto 1/VM2/: Dockerfile  go.mod  main.go
Proyecto2/: Pasos.txt  PlanTrabajo.txt
Proyecto2/Bash/: Dockerfile_high_cpu_ram1  Dockerfile_high_cpu_ram2  crear_contenedores.sh  cron_containers.sh  eliminar_contenedores.sh
Proyecto2/Daemon/: continfo_so1_201807351  daemon.go  go.mod  go.sum  main.go  so1_metrics.db  sysinfo.json  sysinfo_so1_201807351
Proyecto2/Kernel/: .Module.symvers.cmd  .modules.order.cmd  .proceso_monitor.ko.cmd  .proceso_monitor.mod.cmd  .proceso_monitor.mod.o.cmd  .proceso_monitor.o.cmd  Makefile  proceso_monitor.c  proceso_monitor.ko  proceso_monitor.mod  proceso_monitor.mod.c  reload_module.sh
Proyecto3/: deploy.yaml  valkey-deploy.yaml
Proyecto3/go-services/: Dockerfile.kafka  Dockerfile.rabbit  Dockerfile.valkey  dockerfile  go.mod  go.sum
Proyecto3/go-services/common/: weather.proto
Proyecto3/go-services/common/proto/: weather.pb.go  weather_grpc.pb.go
Proyecto3/go-services/consumers/: .env  valkey.go
Proyecto3/go-services/server/: server.go
Proyecto3/go-services/writers/: kafka_writer.go  rabbit_writer.go
Proyecto3/locust/: locustfile.py
Proyecto3/rust-api/: .env  .gitignore  Cargo.toml  Dockerfile  api-rust.yaml  build.rs
Proyecto3/rust-api/src/: grpc_client.rs  main.rs  models.rs
