[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# gRPC
tonic = "0.9"
prost = "0.11"  # para generar los tipos desde proto
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.9"